# code_ai_from_start_to_end

./: .gitignore  README.md  healthcareProj.ipynb
fsp_v01/: README.md  cli.py  pyproject.toml
fsp_v01/fsp_v01/: __main__.py  config.py
fsp_v01/fsp_v01/data_centre/: DBfsp_v01.db  THYAO_ONEYEAR.csv  THYAO_RT_PRICE.csv  companies.json  dataCentre.py  dbMain.py  sectors.json
fsp_v01/fsp_v01/scrap/: IST_List.json  scrap.py
fsp_v01/fsp_v01/ui/: mainWindow.py  ui_window.py  uiview_fsp_v01.ui  updateui.py
hcc_v01/: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
hcc_v01/hcc_v01/: __main__.py
hcc_v01/hcc_v01/DB/: DBhcc_v01.db  dbMain.py
hcc_v01/hcc_v01/actions/: buttonActions.py  listActions.py
hcc_v01/hcc_v01/model/: model_hcc.py
hcc_v01/hcc_v01/ui/: esseWindow.py  icons.qrc  icons_rc.py  mainWindow.py  ui_window.py  uiview_hcc_v01.ui  updateui.py
